--- a/article.html
+++ b/article.html
@@ -5,7 +5,7 @@
     <!-- URL of the web version of this article -->
     <!-- TODO: Change the domain to match the domain of your website -->    
     <meta property="fb:pages" content="106912817350102" />
-    <link rel="canonical" href="https://boiling-plains-31875.herokuapp.com/firstarticle.html">
+    <link rel="canonical" href="https://kaungkaung0.github.io/article.html">
     <meta property="op:markup_version" content="v1.0">
     <meta property="fb:pages" content="106912817350102" />
   </head>
