--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Helllo World</h1>
-    <a href="/firstarticle.html">First Article</a>
+    <a href="/article.html">First Article</a>
 </body>
 </html>
